Add explain docs

--- a/token-stake/simple.ipynb
+++ b/token-stake/simple.ipynb
@@ -29,6 +29,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "`Staking`中用户存入了一定数量的token，pool中reward token通过外部打入，然后在一个周期内将其按照用户质押的数量占比分配掉reward token\n",
+        "\n",
+        "合约中奖励的分配是**平均每秒**的释放方式，比如\n",
+        "```\n",
+        "一个周期为60个单位时间，打入奖励token的数量6,此时：\n",
+        "lastUpdateTime=0；periodFinish=60；rewardPerTokenStored=0\n",
+        "rewardRate = 6/60 = 0.1\n",
+        "rewards[UserA] = 0\n",
+        "\n",
+        "UserA在第0个单位时间stake了100个token,此时：\n",
+        "    balanceOf(UserA) = 100\n",
+        "    total = 100\n",
+        "\n",
+        "{ \n",
+        "    第10个单位时间，此时计算UserA的收益：\n",
+        "    temp_rewardPerTokenStored = rewardPerTokenStored + (lastTimeRewardApplicable - lastUpdateTime) * rewardRate / total = 0 + (10-0)*0.1/100 = 0.001\n",
+        "    rewards = rewards[UserA] + balanceOf(UserA) * (temp_rewardPerTokenStored - userRewardPerTokenPaid[UserA]) = 0 + 100*(0.001-0)=1\n",
+        "}\n",
+        "\n",
+        "UserB在第10个单位时间stake了200个token，此时：\n",
+        "    rewardPerTokenStored = rewardPerTokenStored + (lastTimeRewardApplicable - lastUpdateTime) * rewardRate / total = 0 + (10-0)*0.1/100 = 0.01\n",
+        "    lastUpdateTime = 10\n",
+        "    userRewardPerTokenPaid[UserB] = rewardPerTokenStored = 0.01\n",
+        "    balanceOf(UserB) = 200\n",
+        "    total = 300\n",
+        "\n",
+        "{ \n",
+        "    第20个单位时间，此时计算UserA的收益：\n",
+        "    temp_rewardPerTokenStored = rewardPerTokenStored + (lastTimeRewardApplicable - lastUpdateTime) * rewardRate / total = 0.01 + (20-10)*0.1/300 = 0.0133\n",
+        "    rewards = rewards[UserA] + balanceOf(UserA) * (temp_rewardPerTokenStored - userRewardPerTokenPaid[UserA]) = 0 + 100*(0.0133-0)=1.33\n",
+        "\n",
+        "    第20个单位时间，此时计算UserB的收益：\n",
+        "    temp_rewardPerTokenStored = 0.0133\n",
+        "    rewards = rewards[UserB] + balanceOf(UserB) * (temp_rewardPerTokenStored - userRewardPerTokenPaid[UserB]) = 0 + 200*(0.0133-0.01) = 0.66\n",
+        "}\n",
+        "    \n",
+        "```"
+      ],
+      "metadata": {
+        "id": "6jjVV42IyCq_"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -45,7 +90,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "dHbeYJ1w1HSX",
-        "outputId": "5b21b734-71c5-41a0-be92-500a26f43b82",
+        "outputId": "329643e3-1245-4f4e-f09b-52b6f2bd4750",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -55,7 +100,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1675235779"
+              "1675318795"
             ]
           },
           "metadata": {},
@@ -68,10 +113,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "metadata": {
         "id": "FYxrpk_51HSY",
-        "outputId": "c6543196-d4b7-416a-dd05-251eb9a579aa",
+        "outputId": "7118d487-0dd9-4837-b753-3b73234f47ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -83,7 +128,7 @@
           "text": [
             "<>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
             "<>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-            "<ipython-input-22-8bff1e5d3881>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+            "<ipython-input-3-8bff1e5d3881>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
             "  assert(self.rewardRate > 0, \"reward rate = 0\")\n"
           ]
         }
@@ -182,12 +227,12 @@
       ],
       "metadata": {
         "id": "7VwiPqsv6LdB",
-        "outputId": "1c7439bc-9fcb-4616-ec37-9eb7bc2ed66c",
+        "outputId": "e04ffc76-1c9f-4625-802d-e349e161664c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,12 +260,12 @@
       ],
       "metadata": {
         "id": "piW8M-jJ6thk",
-        "outputId": "e5d93b0c-21a8-4e90-dcd6-5a96fd8204b4",
+        "outputId": "3f878743-04ef-4327-84d0-ad09cea67961",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,8 +273,8 @@
           "text": [
             "current total amount 0\n",
             "current rewardRate 115740740740740.73\n",
-            "current periodFinish 1675324631\n",
-            "current lastUpdateTime 1675238231\n",
+            "current periodFinish 1675408116\n",
+            "current lastUpdateTime 1675321716\n",
             "current rewardPerTokenStored 0\n"
           ]
         }
@@ -258,12 +303,12 @@
       ],
       "metadata": {
         "id": "F0dzyWUb7J-b",
-        "outputId": "18420d22-bcb9-43a3-a5c2-929ce8a91ac4",
+        "outputId": "826bf42d-3f56-4884-af21-06ab94cb996a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,8 +316,8 @@
           "text": [
             "current total amount 1e+20\n",
             "current rewardRate 115740740740740.73\n",
-            "current periodFinish 1675324631\n",
-            "current lastUpdateTime 1675238234\n",
+            "current periodFinish 1675408116\n",
+            "current lastUpdateTime 1675321723\n",
             "current rewardPerTokenStored 0\n",
             "alice staked 1e+20\n",
             "alice rewards 0.0\n",
@@ -288,18 +333,18 @@
       ],
       "metadata": {
         "id": "LkkjNCrB8wFF",
-        "outputId": "b148b7a2-3c55-45d3-8eae-66932d75bc76",
+        "outputId": "8780b463-9bf7-40c6-a6d4-319ce7533616",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T1 query alice current earned 1.3927469135802468e+16\n"
+            "T1 query alice current earned 347222222222222.2\n"
           ]
         }
       ]
@@ -311,18 +356,18 @@
       ],
       "metadata": {
         "id": "YqezadUW-BX8",
-        "outputId": "245a50a9-ae19-4da7-9d27-3ef392e15fac",
+        "outputId": "b292cd6c-8ad0-4461-9f2e-98a7cdd83e22",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T2 query alice current earned 1.404320987654321e+16\n"
+            "T2 query alice current earned 694444444444444.4\n"
           ]
         }
       ]
@@ -333,7 +378,7 @@
       "metadata": {
         "id": "fDV79VlK-6xs"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -359,12 +404,12 @@
       ],
       "metadata": {
         "id": "SrOUgkZD--iE",
-        "outputId": "b2dd29e8-d739-40e1-8d2b-d5f9b65f0d21",
+        "outputId": "739e2355-daab-42b2-8fb2-4065be1edeb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,12 +417,12 @@
           "text": [
             "current total amount 3e+20\n",
             "current rewardRate 115740740740740.73\n",
-            "current periodFinish 1675324631\n",
-            "current lastUpdateTime 1675238344\n",
-            "current rewardPerTokenStored 127314814814814.81\n",
+            "current periodFinish 1675408116\n",
+            "current lastUpdateTime 1675321732\n",
+            "current rewardPerTokenStored 10416666666666.666\n",
             "bob staked 2e+20\n",
             "bob rewards 0.0\n",
-            "bob userRewardPerTokenPaid 127314814814814.81\n"
+            "bob userRewardPerTokenPaid 10416666666666.666\n"
           ]
         }
       ]
@@ -389,18 +434,18 @@
       ],
       "metadata": {
         "id": "-btT1E5A_IEx",
-        "outputId": "e89eafe2-6239-4b26-e989-63a3d3684a87",
+        "outputId": "e8301934-cc5c-4916-85fc-acb06428641f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T1 query bob current earned 2932098765432100.0\n"
+            "T1 query bob current earned 231481481481481.66\n"
           ]
         }
       ]
@@ -412,18 +457,18 @@
       ],
       "metadata": {
         "id": "phP2D7F3_K4_",
-        "outputId": "79e148b4-a0db-4b63-d7eb-1fe5c86db21d",
+        "outputId": "d4a6ee4a-2bdf-453c-cf64-f9e8e65d186c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T2 query bob current earned 3163580246913581.0\n"
+            "T2 query bob current earned 385802469135802.3\n"
           ]
         }
       ]
@@ -434,7 +479,7 @@
       "metadata": {
         "id": "7pnr7T-O_SQq"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -460,12 +505,12 @@
       ],
       "metadata": {
         "id": "tKZKJyre_UYO",
-        "outputId": "1e331547-5b7a-40aa-a612-60b7e8c956df",
+        "outputId": "e501d61c-42ba-4b3b-f0c0-b44f1c7bbea9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,12 +518,12 @@
           "text": [
             "current total amount 4e+20\n",
             "current rewardRate 115740740740740.73\n",
-            "current periodFinish 1675324631\n",
-            "current lastUpdateTime 1675238449\n",
-            "current rewardPerTokenStored 167824074074074.06\n",
+            "current periodFinish 1675408116\n",
+            "current lastUpdateTime 1675321740\n",
+            "current rewardPerTokenStored 13503086419753.086\n",
             "bob staked 3e+20\n",
-            "bob rewards 8101851851851850.0\n",
-            "bob userRewardPerTokenPaid 167824074074074.06\n"
+            "bob rewards 617283950617284.0\n",
+            "bob userRewardPerTokenPaid 13503086419753.086\n"
           ]
         }
       ]
@@ -490,18 +535,18 @@
       ],
       "metadata": {
         "id": "Qul5cDkj_h6q",
-        "outputId": "e3ad298c-82d6-4312-b43b-fe59895ccfa6",
+        "outputId": "9b355ccb-574a-4bdd-dc13-398c1869422b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T3 query bob current earned 9577546296296290.0\n"
+            "T3 query bob current earned 877700617283950.4\n"
           ]
         }
       ]
@@ -513,18 +558,18 @@
       ],
       "metadata": {
         "id": "7Nsio5xL_lI3",
-        "outputId": "5a1c9c29-16d3-4da0-8a58-5d2a6ad5b6ef",
+        "outputId": "3449e87c-51fa-4221-ff28-5a6b258a4702",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T4 query bob current earned 9837962962962960.0\n"
+            "T4 query bob current earned 1051311728395062.0\n"
           ]
         }
       ]
@@ -535,7 +580,7 @@
       "metadata": {
         "id": "ZRt5i-W-_msF"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -557,12 +602,12 @@
       ],
       "metadata": {
         "id": "cifvCWaX_ntM",
-        "outputId": "b3e3099d-f982-47a6-f0cf-1f3232123eba",
+        "outputId": "de1d7dc1-d088-4ad7-e41d-79ed1c3813ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,9 +616,9 @@
             "alice unstaked amount 5e+19\n",
             "current total amount 3.5e+20\n",
             "current rewardRate 115740740740740.73\n",
-            "current periodFinish 1675324631\n",
-            "current lastUpdateTime 1675238780\n",
-            "current rewardPerTokenStored 263599537037037.03\n"
+            "current periodFinish 1675408116\n",
+            "current lastUpdateTime 1675321749\n",
+            "current rewardPerTokenStored 16107253086419.752\n"
           ]
         }
       ]
@@ -589,21 +634,21 @@
       ],
       "metadata": {
         "id": "Qh4SNYYSAnaO",
-        "outputId": "c810357b-bfeb-4406-86a4-a63cd61b5341",
+        "outputId": "b2d59651-f203-4410-c79f-8270e6b4b48f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "alice staked 5e+19\n",
-            "alice rewards 2.6359953703703704e+16\n",
-            "alice userRewardPerTokenPaid 263599537037037.03\n",
-            "Tn query alice current earned 2.688905423280423e+16\n"
+            "alice rewards 1610725308641975.0\n",
+            "alice userRewardPerTokenPaid 16107253086419.752\n",
+            "Tn query alice current earned 1660328483245149.5\n"
           ]
         }
       ]
@@ -619,18 +664,18 @@
       ],
       "metadata": {
         "id": "SUZYR20SA6hd",
-        "outputId": "5699d1ec-181b-4422-87e2-abb7bfa4fb45",
+        "outputId": "56f86ae8-15e6-449a-9455-50dc46474dfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "alice getReward amount 2.8410218253968256e+16\n"
+            "alice getReward amount 1743000440917107.2\n"
           ]
         }
       ]
@@ -651,12 +696,12 @@
       ],
       "metadata": {
         "id": "m6hTUgXiBQ44",
-        "outputId": "1912485c-2659-49c8-800a-b4f1a2c2445d",
+        "outputId": "002d22fe-f891-455c-a024-f228f02abb7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,12 +709,12 @@
           "text": [
             "current total amount 3.5e+20\n",
             "current rewardRate 115740740740740.73\n",
-            "current periodFinish 1675324631\n",
-            "current lastUpdateTime 1675238904\n",
+            "current periodFinish 1675408116\n",
+            "current lastUpdateTime 1675321757\n",
             "alice staked 5e+19\n",
             "alice rewards 0\n",
-            "alice userRewardPerTokenPaid 304604828042328.06\n",
-            "Tn query alice current earned 82671957671956.25\n"
+            "alice userRewardPerTokenPaid 18752755731922.4\n",
+            "Tn query alice current earned 82671957671957.61\n"
           ]
         }
       ]
