--- a/token-stake/booster.ipynb
+++ b/token-stake/booster.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwZ/v61KfTM0cAnnr3hlgh",
+      "authorship_tag": "ABX9TyO37BQayAPjQIOAhSf/+iEg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Booster with lock"
+        "# Staking with lock to booster"
       ],
       "metadata": {
         "id": "VtVZ5oPAULQn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "通过质押token并且锁仓一定时间，可以获取boost的收益\n",
+        "\n",
+        "奖励部分的逻辑与`SimepleStakingRewards`一致，只是其中用户质押的数据需要按照`BoostPool`中的**份额**来替代计算\n",
+        "\n",
+        "核心的问题：\n",
+        "- 质押的数量转换成份额数\n",
+        "- **Lock**周期带来的Boost收益系数\n"
+      ],
+      "metadata": {
+        "id": "miu6AINB-1L3"
       }
     },
     {
@@ -79,7 +94,7 @@
     {
       "cell_type": "code",
       "source": [
-        "class SimepleStakingRewards(object):\n",
+        "class StakingRewards(object):\n",
         "    \n",
         "    def __init__(self) -> None:\n",
         "        self.stakingToken = 'stakingToken'\n",
@@ -95,19 +110,20 @@
         "        self.userRewardPerTokenPaid = {'boostPool': 0, 'alice': 0, 'bob': 0, 'kite': 0}\n",
         "        self.rewards = {'boostPool': 0, 'alice': 0, 'bob': 0, 'kite': 0}\n",
         "\n",
-        "        self.totalSupply = 0\n",
-        "        self.balanceOf = {'boostPool': 0, 'alice': 0, 'bob': 0, 'kite': 0}\n",
+        "        # Note: this data will be from `BoostPool`\n",
+        "        # self.totalSupply = 0\n",
+        "        # self.balanceOf = {'boostPool': 0, 'alice': 0, 'bob': 0, 'kite': 0}\n",
         "    \n",
-        "    def stake(self, address: str, amount: int):\n",
-        "        self.updateReward(address)\n",
-        "        self.balanceOf[address] += amount\n",
-        "        self.totalSupply += amount\n",
+        "    # def stake(self, address: str, amount: int):\n",
+        "    #     self.updateReward(address)\n",
+        "    #     self.balanceOf[address] += amount\n",
+        "    #     self.totalSupply += amount\n",
         "    \n",
-        "    def withdraw(self, to: str, amount: int):\n",
-        "        self.updateReward(to)\n",
-        "        self.balanceOf[to] -= amount\n",
-        "        self.totalSupply -= amount\n",
-        "        return amount\n",
+        "    # def withdraw(self, to: str, amount: int):\n",
+        "    #     self.updateReward(to)\n",
+        "    #     self.balanceOf[to] -= amount\n",
+        "    #     self.totalSupply -= amount\n",
+        "    #     return amount\n",
         "      \n",
         "    def updateReward(self, _account: str):\n",
         "        self.rewardPerTokenStored = self.rewardPerToken()\n",
@@ -164,17 +180,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oGKJ059BUZdS",
-        "outputId": "c9368fcd-92bb-4361-99c9-72b5ca0d065a"
+        "outputId": "dba660f5-faa0-40b2-f52f-7c2f247d9a7a"
       },
-      "execution_count": 3,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-            "<>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-            "<ipython-input-3-529cba119442>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+            "<>:69: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+            "<>:69: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+            "<ipython-input-49-c96011e66ff7>:69: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
             "  assert(self.rewardRate > 0, \"reward rate = 0\")\n"
           ]
         }
@@ -249,7 +265,7 @@
         "\n",
         "class BoostPool(object):\n",
         "\n",
-        "    def __init__(self, rewardDistributor: SimepleStakingRewards) -> None:\n",
+        "    def __init__(self, rewardDistributor: StakingRewards) -> None:\n",
         "        self.address = 'boostPool'\n",
         "        self.balanceOfToken = 0\n",
         "\n",
@@ -447,7 +463,7 @@
       "metadata": {
         "id": "KAoKnlSVUfhG"
       },
-      "execution_count": 36,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -462,14 +478,14 @@
     {
       "cell_type": "code",
       "source": [
-        "rewardDistributor = SimepleStakingRewards()\n",
+        "rewardDistributor = StakingRewards()\n",
         "\n",
         "pool = BoostPool(rewardDistributor)"
       ],
       "metadata": {
         "id": "mZOSkKpdB3fM"
       },
-      "execution_count": 37,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -501,10 +517,10 @@
       ],
       "metadata": {
         "id": "iKbgmMRxtv45",
-        "outputId": "9f40881e-7e9d-49a3-9d52-48248cc041cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f40881e-7e9d-49a3-9d52-48248cc041cd"
       },
       "execution_count": 12,
       "outputs": [
@@ -550,11 +566,11 @@
         "print(\"pool harvestRewards\", pool.harvestRewards)"
       ],
       "metadata": {
-        "id": "JeMWDZ0LDWwB",
-        "outputId": "54f96f70-8899-4f0e-e6b9-0ea4d10a8d01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JeMWDZ0LDWwB",
+        "outputId": "54f96f70-8899-4f0e-e6b9-0ea4d10a8d01"
       },
       "execution_count": 13,
       "outputs": [
@@ -591,11 +607,11 @@
         "print(\"pool harvestRewards\", pool.harvestRewards)\n"
       ],
       "metadata": {
-        "id": "q1M9o3zYDfwt",
-        "outputId": "35965089-ef00-4bed-9436-3ac95aaf7663",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q1M9o3zYDfwt",
+        "outputId": "35965089-ef00-4bed-9436-3ac95aaf7663"
       },
       "execution_count": 14,
       "outputs": [
@@ -651,11 +667,11 @@
         "print(\"pool harvestRewards\", pool.harvestRewards)"
       ],
       "metadata": {
-        "id": "kGfipG9hEXpR",
-        "outputId": "03d6f658-1ac8-4b23-c42e-71fbea9ae07b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kGfipG9hEXpR",
+        "outputId": "03d6f658-1ac8-4b23-c42e-71fbea9ae07b"
       },
       "execution_count": 38,
       "outputs": [
@@ -695,11 +711,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "SFQrYBbPFQPi",
-        "outputId": "e086b082-fea7-4ae2-c80d-3ca3057c3f8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SFQrYBbPFQPi",
+        "outputId": "e086b082-fea7-4ae2-c80d-3ca3057c3f8c"
       },
       "execution_count": 48,
       "outputs": [
@@ -726,11 +742,11 @@
         "datetime.now()"
       ],
       "metadata": {
-        "id": "HVBTG9WTGRDK",
-        "outputId": "90218db1-9a55-43a3-acf3-767871edbb49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HVBTG9WTGRDK",
+        "outputId": "90218db1-9a55-43a3-acf3-767871edbb49"
       },
       "execution_count": 47,
       "outputs": [
