--- a/token-stake/booster.ipynb
+++ b/token-stake/booster.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO37BQayAPjQIOAhSf/+iEg",
+      "authorship_tag": "ABX9TyPpE8MLTyRHzhF2kMYxLODM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "7iUsnT_ZUH3r"
       },
@@ -77,7 +77,7 @@
         "id": "FaKNMtxjUXHE",
         "outputId": "038da1f7-c18a-4b4c-88e7-77a05a76e2b9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -142,6 +142,10 @@
         "    def earned(self, _account: str):\n",
         "        return ((self.balanceOf[_account] *\n",
         "                (self.rewardPerToken() - self.userRewardPerTokenPaid[_account])) / 1e18) + self.rewards[_account]\n",
+        "    \n",
+        "    def update(self, account):\n",
+        "        # !! must in boostpool, to update account reward \n",
+        "        self.updateReward(account)\n",
         "\n",
         "    def getReward(self, to: str):\n",
         "        \"\"\"Gain reward token\"\"\"\n",
@@ -182,7 +186,7 @@
         "id": "oGKJ059BUZdS",
         "outputId": "dba660f5-faa0-40b2-f52f-7c2f247d9a7a"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,6 +299,9 @@
         "        # if self.totalShares == 0:\n",
         "        #     stockAmount = self.available()\n",
         "        \n",
+        "        # 与reward合约关联的地方\n",
+        "        self._updateExtraReward(to)\n",
+        "        \n",
         "        self._updateUserShare(to)\n",
         "\n",
         "        if lockDuration > 0:\n",
@@ -370,6 +377,9 @@
         "\n",
         "        self._harvest()\n",
         "\n",
+        "        # 与reward合约关联的地方\n",
+        "        self._updateExtraReward(to)\n",
+        "\n",
         "        self._updateUserShare(to)\n",
         "\n",
         "        if shares == 0 and amount > 0:\n",
@@ -413,6 +423,9 @@
         "      \n",
         "    def _harvest(self):\n",
         "        self.harvestRewards += self.rewardDistributor.getReward(self.address)\n",
+        "    \n",
+        "    def _updateExtraReward(self, account):\n",
+        "        self.rewardDistributor.update(account)\n",
         "    \n",
         "    def _updateUserShare(self, to):\n",
         "        user = self.userInfo[to]\n",
@@ -463,7 +476,7 @@
       "metadata": {
         "id": "KAoKnlSVUfhG"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -485,7 +498,7 @@
       "metadata": {
         "id": "mZOSkKpdB3fM"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +535,7 @@
         },
         "outputId": "9f40881e-7e9d-49a3-9d52-48248cc041cd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +585,7 @@
         "id": "JeMWDZ0LDWwB",
         "outputId": "54f96f70-8899-4f0e-e6b9-0ea4d10a8d01"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +626,7 @@
         "id": "q1M9o3zYDfwt",
         "outputId": "35965089-ef00-4bed-9436-3ac95aaf7663"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +686,7 @@
         "id": "kGfipG9hEXpR",
         "outputId": "03d6f658-1ac8-4b23-c42e-71fbea9ae07b"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,7 +730,7 @@
         "id": "SFQrYBbPFQPi",
         "outputId": "e086b082-fea7-4ae2-c80d-3ca3057c3f8c"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +761,7 @@
         "id": "HVBTG9WTGRDK",
         "outputId": "90218db1-9a55-43a3-acf3-767871edbb49"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
