--- a/Nostr-relay/about.ipynb
+++ b/Nostr-relay/about.ipynb
@@ -22,9 +22,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Nostr\n",
-        "> The simplest open protocol that is able to create a censorship-resistant global \"social\" network once and for all.\n",
-        "\n",
+        "### Nostr\n",
+        "> The simplest open protocol that “nostr” stands for “Notes and Other Stuff Transmitted by Relays” and is an open protocol for censorship-resistant global networks.\n"
+      ],
+      "metadata": {
+        "id": "ZPz5Nl1bx-Xw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "slides.\n",
         "\n",
@@ -37,15 +44,22 @@
         "![4](https://pbs.twimg.com/media/FlAPs3SX0AUqbhs?format=jpg&name=small)"
       ],
       "metadata": {
-        "id": "ZPz5Nl1bx-Xw"
+        "id": "MLt_KWQ50XoZ"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
         "### NIP-05\n",
-        "> Mapping Nostr keys to DNS-based internet identifiers\n",
-        "\n",
+        "> Mapping Nostr keys to DNS-based internet identifiers\n"
+      ],
+      "metadata": {
+        "id": "m5NXALUbw9_3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Slides.\n",
         "\n",
         "![1](https://pbs.twimg.com/media/Fnk3oDxWYAEtHlb?format=jpg&name=small)\n",
@@ -59,7 +73,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "m5NXALUbw9_3"
+        "id": "hotzrhXM0dSG"
       }
     },
     {
