--- a/token-stake/booster_logic.ipynb
+++ b/token-stake/booster_logic.ipynb
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "metadata": {
         "id": "KAoKnlSVUfhG"
       },
@@ -337,11 +337,11 @@
         "        if user.shares > 0 and user.locked:\n",
         "            userCurrentLockedBalance = (pool * user.shares) / self.totalShares\n",
         "            currentAmount += userCurrentLockedBalance\n",
-        "            self.totalShares += user.shares\n",
+        "            self.totalShares -= user.shares\n",
         "            user.shares = 0\n",
         "            if user.lockStartTime == self.blockTimestamp:\n",
         "                user.lockedAmount = userCurrentLockedBalance\n",
-        "                self.totalLockedAmount + user.lockedAmount\n",
+        "                self.totalLockedAmount += user.lockedAmount\n",
         "        if self.totalShares != 0:\n",
         "            currentShares = (currentAmount * self.totalShares) / (pool - userCurrentLockedBalance)\n",
         "        else:\n",
@@ -789,25 +789,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kGfipG9hEXpR",
-        "outputId": "156e9785-bb77-4e75-ac54-56c316dec136"
+        "outputId": "d41c1781-9393-42fe-9f4d-0baa7b333509"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "==> lock alice 1.2e+20 1.787706082694926e+20\n",
-            "user infos {'shares': '178770608269492584448.00', 'lastDepositedTime': 1675929449, 'tokenAtLastUserAction': 1.2000000000000002e+20, 'lastUserActionTime': 1675929449, 'lockStartTime': 1675929449, 'lockEndTime': 1676534249, 'userBoostedShare': '2301369863013698816.00', 'locked': True, 'lockedAmount': '120000000000000000000.00'}\n",
+            "==> lock alice 1.2e+20 1.223013698630137e+20\n",
+            "user infos {'shares': '122301369863013695488.00', 'lastDepositedTime': 1675929449, 'tokenAtLastUserAction': 1.2e+20, 'lastUserActionTime': 1675929449, 'lockStartTime': 1675929449, 'lockEndTime': 1676534249, 'userBoostedShare': '2301369863013698816.00', 'locked': True, 'lockedAmount': '120000000000000000000.00'}\n",
             "pool balanceOfToken 436111110999999971328.00\n",
-            "pool totalShares 875247751031452860416.00\n",
+            "pool totalShares 598778512624974036992.00\n",
             "pool totalBoostDebt 162667401624974000128.00\n",
-            "pool totalLockedAmount 326111110999999971328.00\n",
+            "pool totalLockedAmount 436111110999999971328.00\n",
             "pool harvestRewards 0.00\n"
           ]
         }
